## Process this file with automake to produce Makefile.in

current_dir = $(shell pwd)

lib_LTLIBRARIES =  \
	libtitania-x3d.la

libtitania_x3d_la_SOURCES =  \
	$(current_dir)/Titania/X3D.cpp \
	$(current_dir)/Titania/X3D/Base/International.cpp \
	$(current_dir)/Titania/X3D/Base/Output.cpp \
	$(current_dir)/Titania/X3D/Base/X3DChildObject.cpp \
	$(current_dir)/Titania/X3D/Base/X3DEventObject.cpp \
	$(current_dir)/Titania/X3D/Base/X3DGarbargeCollector.cpp \
	$(current_dir)/Titania/X3D/Base/X3DInput.cpp \
	$(current_dir)/Titania/X3D/Base/X3DObject.cpp \
	$(current_dir)/Titania/X3D/Base/X3DOutput.cpp \
	$(current_dir)/Titania/X3D/Basic/FieldSet.cpp \
	$(current_dir)/Titania/X3D/Basic/X3DBaseNode.cpp \
	$(current_dir)/Titania/X3D/Basic/X3DFieldDefinition.cpp \
	$(current_dir)/Titania/X3D/Bits/Error.cpp \
	$(current_dir)/Titania/X3D/Bits/Traverse.cpp \
	$(current_dir)/Titania/X3D/Browser/Browser.cpp \
	$(current_dir)/Titania/X3D/Browser/Console.cpp \
	$(current_dir)/Titania/X3D/Browser/Core/BrowserOptions.cpp \
	$(current_dir)/Titania/X3D/Browser/Core/BrowserProperties.cpp \
	$(current_dir)/Titania/X3D/Browser/Core/Clipboard.cpp \
	$(current_dir)/Titania/X3D/Browser/Core/RenderingProperties.cpp \
	$(current_dir)/Titania/X3D/Browser/Core/X3DCoreContext.cpp \
	$(current_dir)/Titania/X3D/Browser/Core/X3DOptionNode.cpp \
	$(current_dir)/Titania/X3D/Browser/CubeMapTexturing/X3DCubeMapTexturingContext.cpp \
	$(current_dir)/Titania/X3D/Browser/EnvironmentalEffects/X3DEnvironmentalEffectsContext.cpp \
	$(current_dir)/Titania/X3D/Browser/Geometry2D/Arc2DOptions.cpp \
	$(current_dir)/Titania/X3D/Browser/Geometry2D/ArcClose2DOptions.cpp \
	$(current_dir)/Titania/X3D/Browser/Geometry2D/Circle2DOptions.cpp \
	$(current_dir)/Titania/X3D/Browser/Geometry2D/Disk2DOptions.cpp \
	$(current_dir)/Titania/X3D/Browser/Geometry2D/Rectangle2DOptions.cpp \
	$(current_dir)/Titania/X3D/Browser/Geometry2D/X3DGeometry2DContext.cpp \
	$(current_dir)/Titania/X3D/Browser/Geometry3D/BoxOptions.cpp \
	$(current_dir)/Titania/X3D/Browser/Geometry3D/ConeOptions.cpp \
	$(current_dir)/Titania/X3D/Browser/Geometry3D/CylinderOptions.cpp \
	$(current_dir)/Titania/X3D/Browser/Geometry3D/IcosahedronOptions.cpp \
	$(current_dir)/Titania/X3D/Browser/Geometry3D/OctahedronOptions.cpp \
	$(current_dir)/Titania/X3D/Browser/Geometry3D/QuadSphereOptions.cpp \
	$(current_dir)/Titania/X3D/Browser/Geometry3D/X3DGeometry3DContext.cpp \
	$(current_dir)/Titania/X3D/Browser/Geometry3D/X3DSphereOptionsNode.cpp \
	$(current_dir)/Titania/X3D/Browser/Geospatial/Geospatial.cpp \
	$(current_dir)/Titania/X3D/Browser/KeyDeviceSensor/KeyDevice.cpp \
	$(current_dir)/Titania/X3D/Browser/KeyDeviceSensor/Keys.cpp \
	$(current_dir)/Titania/X3D/Browser/KeyDeviceSensor/X3DKeyDeviceSensorContext.cpp \
	$(current_dir)/Titania/X3D/Browser/Layering/X3DLayeringContext.cpp \
	$(current_dir)/Titania/X3D/Browser/Layout/ScreenText.cpp \
	$(current_dir)/Titania/X3D/Browser/Lighting/X3DLightingContext.cpp \
	$(current_dir)/Titania/X3D/Browser/Navigation/ExamineViewer.cpp \
	$(current_dir)/Titania/X3D/Browser/Navigation/FlyViewer.cpp \
	$(current_dir)/Titania/X3D/Browser/Navigation/LookAtViewer.cpp \
	$(current_dir)/Titania/X3D/Browser/Navigation/NoneViewer.cpp \
	$(current_dir)/Titania/X3D/Browser/Navigation/PlaneViewer.cpp \
	$(current_dir)/Titania/X3D/Browser/Navigation/WalkViewer.cpp \
	$(current_dir)/Titania/X3D/Browser/Navigation/X3DExamineViewer.cpp \
	$(current_dir)/Titania/X3D/Browser/Navigation/X3DFlyViewer.cpp \
	$(current_dir)/Titania/X3D/Browser/Navigation/X3DNavigationContext.cpp \
	$(current_dir)/Titania/X3D/Browser/Navigation/X3DViewer.cpp \
	$(current_dir)/Titania/X3D/Browser/Networking/config.cpp \
	$(current_dir)/Titania/X3D/Browser/Networking/X3DNetworkingContext.cpp \
	$(current_dir)/Titania/X3D/Browser/Notification.cpp \
	$(current_dir)/Titania/X3D/Browser/NURBS/NURBS.cpp \
	$(current_dir)/Titania/X3D/Browser/ParticleSystems/Random.cpp \
	$(current_dir)/Titania/X3D/Browser/ParticleSystems/SoftSystem.cpp \
	$(current_dir)/Titania/X3D/Browser/ParticleSystems/X3DParticleSystemsContext.cpp \
	$(current_dir)/Titania/X3D/Browser/Picking/VolumePicker.cpp \
	$(current_dir)/Titania/X3D/Browser/Picking/X3DPickingContext.cpp \
	$(current_dir)/Titania/X3D/Browser/PointingDeviceSensor/Hit.cpp \
	$(current_dir)/Titania/X3D/Browser/PointingDeviceSensor/PointingDevice.cpp \
	$(current_dir)/Titania/X3D/Browser/PointingDeviceSensor/X3DPointingDeviceSensorContext.cpp \
	$(current_dir)/Titania/X3D/Browser/ProjectiveTextureMapping/X3DProjectiveTextureMappingContext.cpp \
	$(current_dir)/Titania/X3D/Browser/Rendering/L-System.cpp \
	$(current_dir)/Titania/X3D/Browser/Rendering/MotionBlur.cpp \
	$(current_dir)/Titania/X3D/Browser/Rendering/X3DGeometricOptionNode.cpp \
	$(current_dir)/Titania/X3D/Browser/Rendering/X3DRenderingContext.cpp \
	$(current_dir)/Titania/X3D/Browser/Scripting/X3DScriptingContext.cpp \
	$(current_dir)/Titania/X3D/Browser/Selection.cpp \
	$(current_dir)/Titania/X3D/Browser/Shaders/Shader.cpp \
	$(current_dir)/Titania/X3D/Browser/Shaders/ShaderTest.cpp \
	$(current_dir)/Titania/X3D/Browser/Shaders/X3DShadersContext.cpp \
	$(current_dir)/Titania/X3D/Browser/Shape/X3DShapeContext.cpp \
	$(current_dir)/Titania/X3D/Browser/Sound/MediaStream.cpp \
	$(current_dir)/Titania/X3D/Browser/Sound/X3DSoundContext.cpp \
	$(current_dir)/Titania/X3D/Browser/Text/Font.cpp \
	$(current_dir)/Titania/X3D/Browser/Text/FontFace.cpp \
	$(current_dir)/Titania/X3D/Browser/Text/FontStyleOptions.cpp \
	$(current_dir)/Titania/X3D/Browser/Text/PolygonText.cpp \
	$(current_dir)/Titania/X3D/Browser/Text/X3DTextContext.cpp \
	$(current_dir)/Titania/X3D/Browser/Text/X3DTextGeometry.cpp \
	$(current_dir)/Titania/X3D/Browser/Texturing/Texture.cpp \
	$(current_dir)/Titania/X3D/Browser/Texturing/X3DTexturingContext.cpp \
	$(current_dir)/Titania/X3D/Browser/Texturing3D/NRRDParser.cpp \
	$(current_dir)/Titania/X3D/Browser/Texturing3D/Texture3D.cpp \
	$(current_dir)/Titania/X3D/Browser/Texturing3D/X3DTexturing3DContext.cpp \
	$(current_dir)/Titania/X3D/Browser/Tools/LassoSelection.cpp \
	$(current_dir)/Titania/X3D/Browser/Tools/LightSaber.cpp \
	$(current_dir)/Titania/X3D/Browser/Tools/RectangleSelection.cpp \
	$(current_dir)/Titania/X3D/Browser/Tools/SupportedTools.cpp \
	$(current_dir)/Titania/X3D/Browser/Tools/TransformToolOptions.cpp \
	$(current_dir)/Titania/X3D/Browser/Tools/X3DSelector.cpp \
	$(current_dir)/Titania/X3D/Browser/Tools/X3DToolContext.cpp \
	$(current_dir)/Titania/X3D/Browser/VolumeRendering/X3DVolumeRenderingContext.cpp \
	$(current_dir)/Titania/X3D/Browser/X3DBrowser.cpp \
	$(current_dir)/Titania/X3D/Browser/X3DBrowserContext.cpp \
	$(current_dir)/Titania/X3D/Components/Annotation/AnnotationLayer.cpp \
	$(current_dir)/Titania/X3D/Components/Annotation/AnnotationTarget.cpp \
	$(current_dir)/Titania/X3D/Components/Annotation/GroupAnnotation.cpp \
	$(current_dir)/Titania/X3D/Components/Annotation/IconAnnotation.cpp \
	$(current_dir)/Titania/X3D/Components/Annotation/TextAnnotation.cpp \
	$(current_dir)/Titania/X3D/Components/Annotation/URLAnnotation.cpp \
	$(current_dir)/Titania/X3D/Components/Annotation/X3DAnnotationNode.cpp \
	$(current_dir)/Titania/X3D/Components/CADGeometry/CADAssembly.cpp \
	$(current_dir)/Titania/X3D/Components/CADGeometry/CADFace.cpp \
	$(current_dir)/Titania/X3D/Components/CADGeometry/CADLayer.cpp \
	$(current_dir)/Titania/X3D/Components/CADGeometry/CADPart.cpp \
	$(current_dir)/Titania/X3D/Components/CADGeometry/IndexedQuadSet.cpp \
	$(current_dir)/Titania/X3D/Components/CADGeometry/QuadSet.cpp \
	$(current_dir)/Titania/X3D/Components/CADGeometry/X3DProductStructureChildNode.cpp \
	$(current_dir)/Titania/X3D/Components/Core/MetadataBoolean.cpp \
	$(current_dir)/Titania/X3D/Components/Core/MetadataDouble.cpp \
	$(current_dir)/Titania/X3D/Components/Core/MetadataFloat.cpp \
	$(current_dir)/Titania/X3D/Components/Core/MetadataInteger.cpp \
	$(current_dir)/Titania/X3D/Components/Core/MetadataSet.cpp \
	$(current_dir)/Titania/X3D/Components/Core/MetadataString.cpp \
	$(current_dir)/Titania/X3D/Components/Core/WorldInfo.cpp \
	$(current_dir)/Titania/X3D/Components/Core/X3DBindableNode.cpp \
	$(current_dir)/Titania/X3D/Components/Core/X3DChildNode.cpp \
	$(current_dir)/Titania/X3D/Components/Core/X3DInfoNode.cpp \
	$(current_dir)/Titania/X3D/Components/Core/X3DMetadataObject.cpp \
	$(current_dir)/Titania/X3D/Components/Core/X3DNode.cpp \
	$(current_dir)/Titania/X3D/Components/Core/X3DPrototypeInstance.cpp \
	$(current_dir)/Titania/X3D/Components/Core/X3DSensorNode.cpp \
	$(current_dir)/Titania/X3D/Components/CubeMapTexturing/ComposedCubeMapTexture.cpp \
	$(current_dir)/Titania/X3D/Components/CubeMapTexturing/GeneratedCubeMapTexture.cpp \
	$(current_dir)/Titania/X3D/Components/CubeMapTexturing/ImageCubeMapTexture.cpp \
	$(current_dir)/Titania/X3D/Components/CubeMapTexturing/X3DEnvironmentTextureNode.cpp \
	$(current_dir)/Titania/X3D/Components/DIS/DISEntityManager.cpp \
	$(current_dir)/Titania/X3D/Components/DIS/DISEntityTypeMapping.cpp \
	$(current_dir)/Titania/X3D/Components/DIS/EspduTransform.cpp \
	$(current_dir)/Titania/X3D/Components/DIS/ReceiverPdu.cpp \
	$(current_dir)/Titania/X3D/Components/DIS/SignalPdu.cpp \
	$(current_dir)/Titania/X3D/Components/DIS/TransmitterPdu.cpp \
	$(current_dir)/Titania/X3D/Components/EnvironmentalEffects/Background.cpp \
	$(current_dir)/Titania/X3D/Components/EnvironmentalEffects/Fog.cpp \
	$(current_dir)/Titania/X3D/Components/EnvironmentalEffects/FogCoordinate.cpp \
	$(current_dir)/Titania/X3D/Components/EnvironmentalEffects/LocalFog.cpp \
	$(current_dir)/Titania/X3D/Components/EnvironmentalEffects/TextureBackground.cpp \
	$(current_dir)/Titania/X3D/Components/EnvironmentalEffects/X3DBackgroundNode.cpp \
	$(current_dir)/Titania/X3D/Components/EnvironmentalEffects/X3DFogObject.cpp \
	$(current_dir)/Titania/X3D/Components/EnvironmentalSensor/ProximitySensor.cpp \
	$(current_dir)/Titania/X3D/Components/EnvironmentalSensor/TransformSensor.cpp \
	$(current_dir)/Titania/X3D/Components/EnvironmentalSensor/VisibilitySensor.cpp \
	$(current_dir)/Titania/X3D/Components/EnvironmentalSensor/X3DEnvironmentalSensorNode.cpp \
	$(current_dir)/Titania/X3D/Components/EventUtilities/BooleanFilter.cpp \
	$(current_dir)/Titania/X3D/Components/EventUtilities/BooleanSequencer.cpp \
	$(current_dir)/Titania/X3D/Components/EventUtilities/BooleanToggle.cpp \
	$(current_dir)/Titania/X3D/Components/EventUtilities/BooleanTrigger.cpp \
	$(current_dir)/Titania/X3D/Components/EventUtilities/IntegerSequencer.cpp \
	$(current_dir)/Titania/X3D/Components/EventUtilities/IntegerTrigger.cpp \
	$(current_dir)/Titania/X3D/Components/EventUtilities/TimeTrigger.cpp \
	$(current_dir)/Titania/X3D/Components/EventUtilities/X3DSequencerNode.cpp \
	$(current_dir)/Titania/X3D/Components/EventUtilities/X3DTriggerNode.cpp \
	$(current_dir)/Titania/X3D/Components/Followers/ColorChaser.cpp \
	$(current_dir)/Titania/X3D/Components/Followers/ColorDamper.cpp \
	$(current_dir)/Titania/X3D/Components/Followers/CoordinateChaser.cpp \
	$(current_dir)/Titania/X3D/Components/Followers/CoordinateDamper.cpp \
	$(current_dir)/Titania/X3D/Components/Followers/OrientationChaser.cpp \
	$(current_dir)/Titania/X3D/Components/Followers/OrientationDamper.cpp \
	$(current_dir)/Titania/X3D/Components/Followers/PositionChaser.cpp \
	$(current_dir)/Titania/X3D/Components/Followers/PositionChaser2D.cpp \
	$(current_dir)/Titania/X3D/Components/Followers/PositionDamper.cpp \
	$(current_dir)/Titania/X3D/Components/Followers/PositionDamper2D.cpp \
	$(current_dir)/Titania/X3D/Components/Followers/ScalarChaser.cpp \
	$(current_dir)/Titania/X3D/Components/Followers/ScalarDamper.cpp \
	$(current_dir)/Titania/X3D/Components/Followers/TexCoordChaser2D.cpp \
	$(current_dir)/Titania/X3D/Components/Followers/TexCoordDamper2D.cpp \
	$(current_dir)/Titania/X3D/Components/Followers/X3DChaserNode.cpp \
	$(current_dir)/Titania/X3D/Components/Followers/X3DDamperNode.cpp \
	$(current_dir)/Titania/X3D/Components/Followers/X3DFollowerNode.cpp \
	$(current_dir)/Titania/X3D/Components/Geometry2D/Arc2D.cpp \
	$(current_dir)/Titania/X3D/Components/Geometry2D/ArcClose2D.cpp \
	$(current_dir)/Titania/X3D/Components/Geometry2D/Circle2D.cpp \
	$(current_dir)/Titania/X3D/Components/Geometry2D/Disk2D.cpp \
	$(current_dir)/Titania/X3D/Components/Geometry2D/Polyline2D.cpp \
	$(current_dir)/Titania/X3D/Components/Geometry2D/Polypoint2D.cpp \
	$(current_dir)/Titania/X3D/Components/Geometry2D/Rectangle2D.cpp \
	$(current_dir)/Titania/X3D/Components/Geometry2D/TriangleSet2D.cpp \
	$(current_dir)/Titania/X3D/Components/Geometry3D/Box.cpp \
	$(current_dir)/Titania/X3D/Components/Geometry3D/Cone.cpp \
	$(current_dir)/Titania/X3D/Components/Geometry3D/Cylinder.cpp \
	$(current_dir)/Titania/X3D/Components/Geometry3D/ElevationGrid.cpp \
	$(current_dir)/Titania/X3D/Components/Geometry3D/Extrusion.cpp \
	$(current_dir)/Titania/X3D/Components/Geometry3D/IndexedFaceSet.cpp \
	$(current_dir)/Titania/X3D/Components/Geometry3D/Sphere.cpp \
	$(current_dir)/Titania/X3D/Components/Geospatial/GeoCoordinate.cpp \
	$(current_dir)/Titania/X3D/Components/Geospatial/GeoElevationGrid.cpp \
	$(current_dir)/Titania/X3D/Components/Geospatial/GeoLocation.cpp \
	$(current_dir)/Titania/X3D/Components/Geospatial/GeoLOD.cpp \
	$(current_dir)/Titania/X3D/Components/Geospatial/GeoMetadata.cpp \
	$(current_dir)/Titania/X3D/Components/Geospatial/GeoOrigin.cpp \
	$(current_dir)/Titania/X3D/Components/Geospatial/GeoPositionInterpolator.cpp \
	$(current_dir)/Titania/X3D/Components/Geospatial/GeoProximitySensor.cpp \
	$(current_dir)/Titania/X3D/Components/Geospatial/GeoTouchSensor.cpp \
	$(current_dir)/Titania/X3D/Components/Geospatial/GeoTransform.cpp \
	$(current_dir)/Titania/X3D/Components/Geospatial/GeoViewpoint.cpp \
	$(current_dir)/Titania/X3D/Components/Geospatial/X3DGeospatialObject.cpp \
	$(current_dir)/Titania/X3D/Components/Grouping/Group.cpp \
	$(current_dir)/Titania/X3D/Components/Grouping/StaticGroup.cpp \
	$(current_dir)/Titania/X3D/Components/Grouping/Switch.cpp \
	$(current_dir)/Titania/X3D/Components/Grouping/Transform.cpp \
	$(current_dir)/Titania/X3D/Components/Grouping/X3DBoundedObject.cpp \
	$(current_dir)/Titania/X3D/Components/Grouping/X3DGroupingNode.cpp \
	$(current_dir)/Titania/X3D/Components/Grouping/X3DTransformMatrix3DObject.cpp \
	$(current_dir)/Titania/X3D/Components/Grouping/X3DTransformNode.cpp \
	$(current_dir)/Titania/X3D/Components/H-Anim/HAnimDisplacer.cpp \
	$(current_dir)/Titania/X3D/Components/H-Anim/HAnimHumanoid.cpp \
	$(current_dir)/Titania/X3D/Components/H-Anim/HAnimJoint.cpp \
	$(current_dir)/Titania/X3D/Components/H-Anim/HAnimMotion.cpp \
	$(current_dir)/Titania/X3D/Components/H-Anim/HAnimSegment.cpp \
	$(current_dir)/Titania/X3D/Components/H-Anim/HAnimSite.cpp \
	$(current_dir)/Titania/X3D/Components/Interpolation/ColorInterpolator.cpp \
	$(current_dir)/Titania/X3D/Components/Interpolation/CoordinateInterpolator.cpp \
	$(current_dir)/Titania/X3D/Components/Interpolation/CoordinateInterpolator2D.cpp \
	$(current_dir)/Titania/X3D/Components/Interpolation/EaseInEaseOut.cpp \
	$(current_dir)/Titania/X3D/Components/Interpolation/NormalInterpolator.cpp \
	$(current_dir)/Titania/X3D/Components/Interpolation/OrientationInterpolator.cpp \
	$(current_dir)/Titania/X3D/Components/Interpolation/PositionInterpolator.cpp \
	$(current_dir)/Titania/X3D/Components/Interpolation/PositionInterpolator2D.cpp \
	$(current_dir)/Titania/X3D/Components/Interpolation/ScalarInterpolator.cpp \
	$(current_dir)/Titania/X3D/Components/Interpolation/SplinePositionInterpolator.cpp \
	$(current_dir)/Titania/X3D/Components/Interpolation/SplinePositionInterpolator2D.cpp \
	$(current_dir)/Titania/X3D/Components/Interpolation/SplineScalarInterpolator.cpp \
	$(current_dir)/Titania/X3D/Components/Interpolation/SquadOrientationInterpolator.cpp \
	$(current_dir)/Titania/X3D/Components/Interpolation/X3DInterpolatorNode.cpp \
	$(current_dir)/Titania/X3D/Components/KeyDeviceSensor/KeySensor.cpp \
	$(current_dir)/Titania/X3D/Components/KeyDeviceSensor/StringSensor.cpp \
	$(current_dir)/Titania/X3D/Components/KeyDeviceSensor/X3DKeyDeviceSensorNode.cpp \
	$(current_dir)/Titania/X3D/Components/Layering/Layer.cpp \
	$(current_dir)/Titania/X3D/Components/Layering/LayerSet.cpp \
	$(current_dir)/Titania/X3D/Components/Layering/Viewport.cpp \
	$(current_dir)/Titania/X3D/Components/Layering/X3DLayerNode.cpp \
	$(current_dir)/Titania/X3D/Components/Layering/X3DViewportNode.cpp \
	$(current_dir)/Titania/X3D/Components/Layout/Layout.cpp \
	$(current_dir)/Titania/X3D/Components/Layout/LayoutGroup.cpp \
	$(current_dir)/Titania/X3D/Components/Layout/LayoutLayer.cpp \
	$(current_dir)/Titania/X3D/Components/Layout/ScreenFontStyle.cpp \
	$(current_dir)/Titania/X3D/Components/Layout/ScreenGroup.cpp \
	$(current_dir)/Titania/X3D/Components/Layout/X3DLayoutNode.cpp \
	$(current_dir)/Titania/X3D/Components/Lighting/DirectionalLight.cpp \
	$(current_dir)/Titania/X3D/Components/Lighting/PointLight.cpp \
	$(current_dir)/Titania/X3D/Components/Lighting/SpotLight.cpp \
	$(current_dir)/Titania/X3D/Components/Lighting/X3DLightNode.cpp \
	$(current_dir)/Titania/X3D/Components/Navigation/Billboard.cpp \
	$(current_dir)/Titania/X3D/Components/Navigation/Collision.cpp \
	$(current_dir)/Titania/X3D/Components/Navigation/LOD.cpp \
	$(current_dir)/Titania/X3D/Components/Navigation/NavigationInfo.cpp \
	$(current_dir)/Titania/X3D/Components/Navigation/OrthoViewpoint.cpp \
	$(current_dir)/Titania/X3D/Components/Navigation/Viewpoint.cpp \
	$(current_dir)/Titania/X3D/Components/Navigation/ViewpointGroup.cpp \
	$(current_dir)/Titania/X3D/Components/Navigation/X3DViewpointNode.cpp \
	$(current_dir)/Titania/X3D/Components/Navigation/X3DViewpointObject.cpp \
	$(current_dir)/Titania/X3D/Components/Networking/Anchor.cpp \
	$(current_dir)/Titania/X3D/Components/Networking/Inline.cpp \
	$(current_dir)/Titania/X3D/Components/Networking/LoadSensor.cpp \
	$(current_dir)/Titania/X3D/Components/Networking/X3DNetworkSensorNode.cpp \
	$(current_dir)/Titania/X3D/Components/Networking/X3DUrlObject.cpp \
	$(current_dir)/Titania/X3D/Components/NURBS/Contour2D.cpp \
	$(current_dir)/Titania/X3D/Components/NURBS/ContourPolyline2D.cpp \
	$(current_dir)/Titania/X3D/Components/NURBS/CoordinateDouble.cpp \
	$(current_dir)/Titania/X3D/Components/NURBS/NurbsCurve.cpp \
	$(current_dir)/Titania/X3D/Components/NURBS/NurbsCurve2D.cpp \
	$(current_dir)/Titania/X3D/Components/NURBS/NurbsOrientationInterpolator.cpp \
	$(current_dir)/Titania/X3D/Components/NURBS/NurbsPatchSurface.cpp \
	$(current_dir)/Titania/X3D/Components/NURBS/NurbsPositionInterpolator.cpp \
	$(current_dir)/Titania/X3D/Components/NURBS/NurbsSet.cpp \
	$(current_dir)/Titania/X3D/Components/NURBS/NurbsSurfaceInterpolator.cpp \
	$(current_dir)/Titania/X3D/Components/NURBS/NurbsSweptSurface.cpp \
	$(current_dir)/Titania/X3D/Components/NURBS/NurbsSwungSurface.cpp \
	$(current_dir)/Titania/X3D/Components/NURBS/NurbsTextureCoordinate.cpp \
	$(current_dir)/Titania/X3D/Components/NURBS/NurbsTrimmedSurface.cpp \
	$(current_dir)/Titania/X3D/Components/NURBS/X3DNurbsControlCurveNode.cpp \
	$(current_dir)/Titania/X3D/Components/NURBS/X3DNurbsSurfaceGeometryNode.cpp \
	$(current_dir)/Titania/X3D/Components/NURBS/X3DParametricGeometryNode.cpp \
	$(current_dir)/Titania/X3D/Components/ParticleSystems/BoundedPhysicsModel.cpp \
	$(current_dir)/Titania/X3D/Components/ParticleSystems/ConeEmitter.cpp \
	$(current_dir)/Titania/X3D/Components/ParticleSystems/ExplosionEmitter.cpp \
	$(current_dir)/Titania/X3D/Components/ParticleSystems/ForcePhysicsModel.cpp \
	$(current_dir)/Titania/X3D/Components/ParticleSystems/ParticleSystem.cpp \
	$(current_dir)/Titania/X3D/Components/ParticleSystems/PointEmitter.cpp \
	$(current_dir)/Titania/X3D/Components/ParticleSystems/PolylineEmitter.cpp \
	$(current_dir)/Titania/X3D/Components/ParticleSystems/SurfaceEmitter.cpp \
	$(current_dir)/Titania/X3D/Components/ParticleSystems/VolumeEmitter.cpp \
	$(current_dir)/Titania/X3D/Components/ParticleSystems/WindPhysicsModel.cpp \
	$(current_dir)/Titania/X3D/Components/ParticleSystems/X3DParticleEmitterNode.cpp \
	$(current_dir)/Titania/X3D/Components/ParticleSystems/X3DParticlePhysicsModelNode.cpp \
	$(current_dir)/Titania/X3D/Components/Picking/LinePickSensor.cpp \
	$(current_dir)/Titania/X3D/Components/Picking/PickableGroup.cpp \
	$(current_dir)/Titania/X3D/Components/Picking/PointPickSensor.cpp \
	$(current_dir)/Titania/X3D/Components/Picking/PrimitivePickSensor.cpp \
	$(current_dir)/Titania/X3D/Components/Picking/VolumePickSensor.cpp \
	$(current_dir)/Titania/X3D/Components/Picking/X3DPickableObject.cpp \
	$(current_dir)/Titania/X3D/Components/Picking/X3DPickSensorNode.cpp \
	$(current_dir)/Titania/X3D/Components/PointingDeviceSensor/CylinderSensor.cpp \
	$(current_dir)/Titania/X3D/Components/PointingDeviceSensor/PlaneSensor.cpp \
	$(current_dir)/Titania/X3D/Components/PointingDeviceSensor/SphereSensor.cpp \
	$(current_dir)/Titania/X3D/Components/PointingDeviceSensor/TouchSensor.cpp \
	$(current_dir)/Titania/X3D/Components/PointingDeviceSensor/X3DDragSensorNode.cpp \
	$(current_dir)/Titania/X3D/Components/PointingDeviceSensor/X3DPointingDeviceSensorNode.cpp \
	$(current_dir)/Titania/X3D/Components/PointingDeviceSensor/X3DTouchSensorNode.cpp \
	$(current_dir)/Titania/X3D/Components/ProjectiveTextureMapping/TextureProjectorParallel.cpp \
	$(current_dir)/Titania/X3D/Components/ProjectiveTextureMapping/TextureProjectorPerspective.cpp \
	$(current_dir)/Titania/X3D/Components/ProjectiveTextureMapping/X3DTextureProjectorNode.cpp \
	$(current_dir)/Titania/X3D/Components/Rendering/ClipPlane.cpp \
	$(current_dir)/Titania/X3D/Components/Rendering/Color.cpp \
	$(current_dir)/Titania/X3D/Components/Rendering/ColorRGBA.cpp \
	$(current_dir)/Titania/X3D/Components/Rendering/Coordinate.cpp \
	$(current_dir)/Titania/X3D/Components/Rendering/IndexedLineSet.cpp \
	$(current_dir)/Titania/X3D/Components/Rendering/IndexedTriangleFanSet.cpp \
	$(current_dir)/Titania/X3D/Components/Rendering/IndexedTriangleSet.cpp \
	$(current_dir)/Titania/X3D/Components/Rendering/IndexedTriangleStripSet.cpp \
	$(current_dir)/Titania/X3D/Components/Rendering/LineSet.cpp \
	$(current_dir)/Titania/X3D/Components/Rendering/Normal.cpp \
	$(current_dir)/Titania/X3D/Components/Rendering/PointSet.cpp \
	$(current_dir)/Titania/X3D/Components/Rendering/TriangleFanSet.cpp \
	$(current_dir)/Titania/X3D/Components/Rendering/TriangleSet.cpp \
	$(current_dir)/Titania/X3D/Components/Rendering/TriangleStripSet.cpp \
	$(current_dir)/Titania/X3D/Components/Rendering/X3DColorNode.cpp \
	$(current_dir)/Titania/X3D/Components/Rendering/X3DComposedGeometryNode.cpp \
	$(current_dir)/Titania/X3D/Components/Rendering/X3DCoordinateNode.cpp \
	$(current_dir)/Titania/X3D/Components/Rendering/X3DGeometricPropertyNode.cpp \
	$(current_dir)/Titania/X3D/Components/Rendering/X3DGeometryNode.cpp \
	$(current_dir)/Titania/X3D/Components/Rendering/X3DLineGeometryNode.cpp \
	$(current_dir)/Titania/X3D/Components/Rendering/X3DNormalNode.cpp \
	$(current_dir)/Titania/X3D/Components/RigidBodyPhysics/BallJoint.cpp \
	$(current_dir)/Titania/X3D/Components/RigidBodyPhysics/CollidableOffset.cpp \
	$(current_dir)/Titania/X3D/Components/RigidBodyPhysics/CollidableShape.cpp \
	$(current_dir)/Titania/X3D/Components/RigidBodyPhysics/CollisionCollection.cpp \
	$(current_dir)/Titania/X3D/Components/RigidBodyPhysics/CollisionSensor.cpp \
	$(current_dir)/Titania/X3D/Components/RigidBodyPhysics/CollisionSpace.cpp \
	$(current_dir)/Titania/X3D/Components/RigidBodyPhysics/Contact.cpp \
	$(current_dir)/Titania/X3D/Components/RigidBodyPhysics/DoubleAxisHingeJoint.cpp \
	$(current_dir)/Titania/X3D/Components/RigidBodyPhysics/MotorJoint.cpp \
	$(current_dir)/Titania/X3D/Components/RigidBodyPhysics/RigidBody.cpp \
	$(current_dir)/Titania/X3D/Components/RigidBodyPhysics/RigidBodyCollection.cpp \
	$(current_dir)/Titania/X3D/Components/RigidBodyPhysics/SingleAxisHingeJoint.cpp \
	$(current_dir)/Titania/X3D/Components/RigidBodyPhysics/SliderJoint.cpp \
	$(current_dir)/Titania/X3D/Components/RigidBodyPhysics/UniversalJoint.cpp \
	$(current_dir)/Titania/X3D/Components/RigidBodyPhysics/X3DNBodyCollidableNode.cpp \
	$(current_dir)/Titania/X3D/Components/RigidBodyPhysics/X3DNBodyCollisionSpaceNode.cpp \
	$(current_dir)/Titania/X3D/Components/RigidBodyPhysics/X3DRigidJointNode.cpp \
	$(current_dir)/Titania/X3D/Components/Scripting/Script.cpp \
	$(current_dir)/Titania/X3D/Components/Scripting/X3DScriptNode.cpp \
	$(current_dir)/Titania/X3D/Components/Shaders/ComposedShader.cpp \
	$(current_dir)/Titania/X3D/Components/Shaders/FloatVertexAttribute.cpp \
	$(current_dir)/Titania/X3D/Components/Shaders/Matrix3VertexAttribute.cpp \
	$(current_dir)/Titania/X3D/Components/Shaders/Matrix4VertexAttribute.cpp \
	$(current_dir)/Titania/X3D/Components/Shaders/PackagedShader.cpp \
	$(current_dir)/Titania/X3D/Components/Shaders/ProgramShader.cpp \
	$(current_dir)/Titania/X3D/Components/Shaders/ShaderPart.cpp \
	$(current_dir)/Titania/X3D/Components/Shaders/ShaderProgram.cpp \
	$(current_dir)/Titania/X3D/Components/Shaders/X3DProgrammableShaderObject.cpp \
	$(current_dir)/Titania/X3D/Components/Shaders/X3DShaderNode.cpp \
	$(current_dir)/Titania/X3D/Components/Shaders/X3DVertexAttributeNode.cpp \
	$(current_dir)/Titania/X3D/Components/Shape/Appearance.cpp \
	$(current_dir)/Titania/X3D/Components/Shape/FillProperties.cpp \
	$(current_dir)/Titania/X3D/Components/Shape/LineProperties.cpp \
	$(current_dir)/Titania/X3D/Components/Shape/Material.cpp \
	$(current_dir)/Titania/X3D/Components/Shape/PointProperties.cpp \
	$(current_dir)/Titania/X3D/Components/Shape/Shape.cpp \
	$(current_dir)/Titania/X3D/Components/Shape/TwoSidedMaterial.cpp \
	$(current_dir)/Titania/X3D/Components/Shape/X3DAppearanceChildNode.cpp \
	$(current_dir)/Titania/X3D/Components/Shape/X3DAppearanceNode.cpp \
	$(current_dir)/Titania/X3D/Components/Shape/X3DMaterialNode.cpp \
	$(current_dir)/Titania/X3D/Components/Shape/X3DShapeNode.cpp \
	$(current_dir)/Titania/X3D/Components/Sound/AudioClip.cpp \
	$(current_dir)/Titania/X3D/Components/Sound/Sound.cpp \
	$(current_dir)/Titania/X3D/Components/Sound/X3DSoundNode.cpp \
	$(current_dir)/Titania/X3D/Components/Sound/X3DSoundSourceNode.cpp \
	$(current_dir)/Titania/X3D/Components/Text/FontStyle.cpp \
	$(current_dir)/Titania/X3D/Components/Text/Text.cpp \
	$(current_dir)/Titania/X3D/Components/Text/X3DFontStyleNode.cpp \
	$(current_dir)/Titania/X3D/Components/Texturing/ImageTexture.cpp \
	$(current_dir)/Titania/X3D/Components/Texturing/MovieTexture.cpp \
	$(current_dir)/Titania/X3D/Components/Texturing/MultiTexture.cpp \
	$(current_dir)/Titania/X3D/Components/Texturing/MultiTextureCoordinate.cpp \
	$(current_dir)/Titania/X3D/Components/Texturing/MultiTextureTransform.cpp \
	$(current_dir)/Titania/X3D/Components/Texturing/PixelTexture.cpp \
	$(current_dir)/Titania/X3D/Components/Texturing/TextureCoordinate.cpp \
	$(current_dir)/Titania/X3D/Components/Texturing/TextureCoordinateGenerator.cpp \
	$(current_dir)/Titania/X3D/Components/Texturing/TextureProperties.cpp \
	$(current_dir)/Titania/X3D/Components/Texturing/TextureTransform.cpp \
	$(current_dir)/Titania/X3D/Components/Texturing/X3DTexture2DNode.cpp \
	$(current_dir)/Titania/X3D/Components/Texturing/X3DTextureCoordinateNode.cpp \
	$(current_dir)/Titania/X3D/Components/Texturing/X3DTextureNode.cpp \
	$(current_dir)/Titania/X3D/Components/Texturing/X3DTextureTransformNode.cpp \
	$(current_dir)/Titania/X3D/Components/Texturing3D/ComposedTexture3D.cpp \
	$(current_dir)/Titania/X3D/Components/Texturing3D/ImageTexture3D.cpp \
	$(current_dir)/Titania/X3D/Components/Texturing3D/PixelTexture3D.cpp \
	$(current_dir)/Titania/X3D/Components/Texturing3D/TextureCoordinate3D.cpp \
	$(current_dir)/Titania/X3D/Components/Texturing3D/TextureCoordinate4D.cpp \
	$(current_dir)/Titania/X3D/Components/Texturing3D/TextureTransform3D.cpp \
	$(current_dir)/Titania/X3D/Components/Texturing3D/TextureTransformMatrix3D.cpp \
	$(current_dir)/Titania/X3D/Components/Texturing3D/X3DTexture3DNode.cpp \
	$(current_dir)/Titania/X3D/Components/Time/TimeSensor.cpp \
	$(current_dir)/Titania/X3D/Components/Time/X3DTimeDependentNode.cpp \
	$(current_dir)/Titania/X3D/Components/VolumeRendering/BlendedVolumeStyle.cpp \
	$(current_dir)/Titania/X3D/Components/VolumeRendering/BoundaryEnhancementVolumeStyle.cpp \
	$(current_dir)/Titania/X3D/Components/VolumeRendering/CartoonVolumeStyle.cpp \
	$(current_dir)/Titania/X3D/Components/VolumeRendering/ComposedVolumeStyle.cpp \
	$(current_dir)/Titania/X3D/Components/VolumeRendering/EdgeEnhancementVolumeStyle.cpp \
	$(current_dir)/Titania/X3D/Components/VolumeRendering/IsoSurfaceVolumeData.cpp \
	$(current_dir)/Titania/X3D/Components/VolumeRendering/OpacityMapVolumeStyle.cpp \
	$(current_dir)/Titania/X3D/Components/VolumeRendering/ProjectionVolumeStyle.cpp \
	$(current_dir)/Titania/X3D/Components/VolumeRendering/SegmentedVolumeData.cpp \
	$(current_dir)/Titania/X3D/Components/VolumeRendering/ShadedVolumeStyle.cpp \
	$(current_dir)/Titania/X3D/Components/VolumeRendering/SilhouetteEnhancementVolumeStyle.cpp \
	$(current_dir)/Titania/X3D/Components/VolumeRendering/ToneMappedVolumeStyle.cpp \
	$(current_dir)/Titania/X3D/Components/VolumeRendering/VolumeData.cpp \
	$(current_dir)/Titania/X3D/Components/VolumeRendering/X3DComposableVolumeRenderStyleNode.cpp \
	$(current_dir)/Titania/X3D/Components/VolumeRendering/X3DVolumeDataNode.cpp \
	$(current_dir)/Titania/X3D/Components/VolumeRendering/X3DVolumeRenderStyleNode.cpp \
	$(current_dir)/Titania/X3D/Components/X_ITE/BlendMode.cpp \
	$(current_dir)/Titania/X3D/Components/X_ITE/DepthBuffer.cpp \
	$(current_dir)/Titania/X3D/Components/X_ITE/PolygonMode.cpp \
	$(current_dir)/Titania/X3D/Components/X_ITE/PolygonOffset.cpp \
	$(current_dir)/Titania/X3D/Components/X_ITE/TouchGroup.cpp \
	$(current_dir)/Titania/X3D/Components/X_ITE/TransformMatrix3D.cpp \
	$(current_dir)/Titania/X3D/Configuration/ComponentInfo.cpp \
	$(current_dir)/Titania/X3D/Configuration/ProfileInfo.cpp \
	$(current_dir)/Titania/X3D/Configuration/SupportedComponents.cpp \
	$(current_dir)/Titania/X3D/Configuration/SupportedFields.cpp \
	$(current_dir)/Titania/X3D/Configuration/SupportedNodes.cpp \
	$(current_dir)/Titania/X3D/Configuration/SupportedProfiles.cpp \
	$(current_dir)/Titania/X3D/Configuration/Unit.cpp \
	$(current_dir)/Titania/X3D/Editing/Combine.cpp \
	$(current_dir)/Titania/X3D/Editing/Selection/FaceSelection.cpp \
	$(current_dir)/Titania/X3D/Editing/Undo/UndoGroup.cpp \
	$(current_dir)/Titania/X3D/Editing/Undo/UndoHistory.cpp \
	$(current_dir)/Titania/X3D/Editing/Undo/UndoStep.cpp \
	$(current_dir)/Titania/X3D/Editing/Undo/UndoStepContainer.cpp \
	$(current_dir)/Titania/X3D/Editing/X3DEditor.cpp \
	$(current_dir)/Titania/X3D/Execution/BindableNodeList.cpp \
	$(current_dir)/Titania/X3D/Execution/ExportedNode.cpp \
	$(current_dir)/Titania/X3D/Execution/ImportedNode.cpp \
	$(current_dir)/Titania/X3D/Execution/NamedNode.cpp \
	$(current_dir)/Titania/X3D/Execution/Scene.cpp \
	$(current_dir)/Titania/X3D/Execution/World.cpp \
	$(current_dir)/Titania/X3D/Execution/X3DExecutionContext.cpp \
	$(current_dir)/Titania/X3D/Execution/X3DScene.cpp \
	$(current_dir)/Titania/X3D/Fields/MFImage.cpp \
	$(current_dir)/Titania/X3D/Fields/MFInt32.cpp \
	$(current_dir)/Titania/X3D/Fields/MFNode.cpp \
	$(current_dir)/Titania/X3D/Fields/MFTime.cpp \
	$(current_dir)/Titania/X3D/Fields/NativeArrayFields.cpp \
	$(current_dir)/Titania/X3D/Fields/SFColor.cpp \
	$(current_dir)/Titania/X3D/Fields/SFColorRGBA.cpp \
	$(current_dir)/Titania/X3D/Fields/SFImage.cpp \
	$(current_dir)/Titania/X3D/Fields/SFMatrix3.cpp \
	$(current_dir)/Titania/X3D/Fields/SFMatrix4.cpp \
	$(current_dir)/Titania/X3D/Fields/SFNode.cpp \
	$(current_dir)/Titania/X3D/Fields/SFRotation4.cpp \
	$(current_dir)/Titania/X3D/Fields/SFString.cpp \
	$(current_dir)/Titania/X3D/Fields/SFTime.cpp \
	$(current_dir)/Titania/X3D/Fields/SFVec2.cpp \
	$(current_dir)/Titania/X3D/Fields/SFVec3.cpp \
	$(current_dir)/Titania/X3D/Fields/SFVec4.cpp \
	$(current_dir)/Titania/X3D/Fields/X3DScalar.cpp \
	$(current_dir)/Titania/X3D/InputOutput/FileGenerator.cpp \
	$(current_dir)/Titania/X3D/InputOutput/FileLoader.cpp \
	$(current_dir)/Titania/X3D/InputOutput/Generator.cpp \
	$(current_dir)/Titania/X3D/InputOutput/GoldenGate.cpp \
	$(current_dir)/Titania/X3D/InputOutput/JSONGenerator.cpp \
	$(current_dir)/Titania/X3D/InputOutput/VRMLGenerator.cpp \
	$(current_dir)/Titania/X3D/InputOutput/X3DGenerator.cpp \
	$(current_dir)/Titania/X3D/InputOutput/XMLGenerator.cpp \
	$(current_dir)/Titania/X3D/JavaScript/SpiderMonkey.cpp \
	$(current_dir)/Titania/X3D/JavaScript/SpiderMonkey/ComponentInfo.cpp \
	$(current_dir)/Titania/X3D/JavaScript/SpiderMonkey/ComponentInfoArray.cpp \
	$(current_dir)/Titania/X3D/JavaScript/SpiderMonkey/Context.cpp \
	$(current_dir)/Titania/X3D/JavaScript/SpiderMonkey/ExternProtoDeclarationArray.cpp \
	$(current_dir)/Titania/X3D/JavaScript/SpiderMonkey/FieldDefinitionArray.cpp \
	$(current_dir)/Titania/X3D/JavaScript/SpiderMonkey/Fields/ArrayFields.cpp \
	$(current_dir)/Titania/X3D/JavaScript/SpiderMonkey/Fields/MFNode.cpp \
	$(current_dir)/Titania/X3D/JavaScript/SpiderMonkey/Fields/SFColor.cpp \
	$(current_dir)/Titania/X3D/JavaScript/SpiderMonkey/Fields/SFColorRGBA.cpp \
	$(current_dir)/Titania/X3D/JavaScript/SpiderMonkey/Fields/SFImage.cpp \
	$(current_dir)/Titania/X3D/JavaScript/SpiderMonkey/Fields/SFMatrix3.cpp \
	$(current_dir)/Titania/X3D/JavaScript/SpiderMonkey/Fields/SFMatrix4.cpp \
	$(current_dir)/Titania/X3D/JavaScript/SpiderMonkey/Fields/SFNode.cpp \
	$(current_dir)/Titania/X3D/JavaScript/SpiderMonkey/Fields/SFRotation.cpp \
	$(current_dir)/Titania/X3D/JavaScript/SpiderMonkey/Fields/SFVec2.cpp \
	$(current_dir)/Titania/X3D/JavaScript/SpiderMonkey/Fields/SFVec3.cpp \
	$(current_dir)/Titania/X3D/JavaScript/SpiderMonkey/Fields/SFVec4.cpp \
	$(current_dir)/Titania/X3D/JavaScript/SpiderMonkey/Globals.cpp \
	$(current_dir)/Titania/X3D/JavaScript/SpiderMonkey/ProfileInfo.cpp \
	$(current_dir)/Titania/X3D/JavaScript/SpiderMonkey/ProfileInfoArray.cpp \
	$(current_dir)/Titania/X3D/JavaScript/SpiderMonkey/ProtoDeclarationArray.cpp \
	$(current_dir)/Titania/X3D/JavaScript/SpiderMonkey/RouteArray.cpp \
	$(current_dir)/Titania/X3D/JavaScript/SpiderMonkey/String.cpp \
	$(current_dir)/Titania/X3D/JavaScript/SpiderMonkey/value.cpp \
	$(current_dir)/Titania/X3D/JavaScript/SpiderMonkey/X3DArrayField.cpp \
	$(current_dir)/Titania/X3D/JavaScript/SpiderMonkey/X3DBrowser.cpp \
	$(current_dir)/Titania/X3D/JavaScript/SpiderMonkey/X3DConstants.cpp \
	$(current_dir)/Titania/X3D/JavaScript/SpiderMonkey/X3DExecutionContext.cpp \
	$(current_dir)/Titania/X3D/JavaScript/SpiderMonkey/X3DExternProtoDeclaration.cpp \
	$(current_dir)/Titania/X3D/JavaScript/SpiderMonkey/X3DField.cpp \
	$(current_dir)/Titania/X3D/JavaScript/SpiderMonkey/X3DFieldDefinition.cpp \
	$(current_dir)/Titania/X3D/JavaScript/SpiderMonkey/X3DProtoDeclaration.cpp \
	$(current_dir)/Titania/X3D/JavaScript/SpiderMonkey/X3DRoute.cpp \
	$(current_dir)/Titania/X3D/JavaScript/SpiderMonkey/X3DScene.cpp \
	$(current_dir)/Titania/X3D/JavaScript/X3DJavaScriptContext.cpp \
	$(current_dir)/Titania/X3D/JavaScript/X3DJavaScriptEngine.cpp \
	$(current_dir)/Titania/X3D/Parser/Autodesk/lib3ds/lib3ds_atmosphere.c \
	$(current_dir)/Titania/X3D/Parser/Autodesk/lib3ds/lib3ds_background.c \
	$(current_dir)/Titania/X3D/Parser/Autodesk/lib3ds/lib3ds_camera.c \
	$(current_dir)/Titania/X3D/Parser/Autodesk/lib3ds/lib3ds_chunk.c \
	$(current_dir)/Titania/X3D/Parser/Autodesk/lib3ds/lib3ds_chunktable.c \
	$(current_dir)/Titania/X3D/Parser/Autodesk/lib3ds/lib3ds_file.c \
	$(current_dir)/Titania/X3D/Parser/Autodesk/lib3ds/lib3ds_io.c \
	$(current_dir)/Titania/X3D/Parser/Autodesk/lib3ds/lib3ds_light.c \
	$(current_dir)/Titania/X3D/Parser/Autodesk/lib3ds/lib3ds_material.c \
	$(current_dir)/Titania/X3D/Parser/Autodesk/lib3ds/lib3ds_math.c \
	$(current_dir)/Titania/X3D/Parser/Autodesk/lib3ds/lib3ds_matrix.c \
	$(current_dir)/Titania/X3D/Parser/Autodesk/lib3ds/lib3ds_mesh.c \
	$(current_dir)/Titania/X3D/Parser/Autodesk/lib3ds/lib3ds_node.c \
	$(current_dir)/Titania/X3D/Parser/Autodesk/lib3ds/lib3ds_quat.c \
	$(current_dir)/Titania/X3D/Parser/Autodesk/lib3ds/lib3ds_shadow.c \
	$(current_dir)/Titania/X3D/Parser/Autodesk/lib3ds/lib3ds_track.c \
	$(current_dir)/Titania/X3D/Parser/Autodesk/lib3ds/lib3ds_util.c \
	$(current_dir)/Titania/X3D/Parser/Autodesk/lib3ds/lib3ds_vector.c \
	$(current_dir)/Titania/X3D/Parser/Autodesk/lib3ds/lib3ds_viewport.c \
	$(current_dir)/Titania/X3D/Parser/Autodesk/Parser.cpp \
	$(current_dir)/Titania/X3D/Parser/Colors.cpp \
	$(current_dir)/Titania/X3D/Parser/Filter.cpp \
	$(current_dir)/Titania/X3D/Parser/glTF/Parser.cpp \
	$(current_dir)/Titania/X3D/Parser/Grammar.cpp \
	$(current_dir)/Titania/X3D/Parser/JSONParser.cpp \
	$(current_dir)/Titania/X3D/Parser/MiniParser.cpp \
	$(current_dir)/Titania/X3D/Parser/Parser.cpp \
	$(current_dir)/Titania/X3D/Parser/PDF/Parser.cpp \
	$(current_dir)/Titania/X3D/Parser/SVG/Parser.cpp \
	$(current_dir)/Titania/X3D/Parser/VRML1/Converter.cpp \
	$(current_dir)/Titania/X3D/Parser/VRML1/Nodes/Background.cpp \
	$(current_dir)/Titania/X3D/Parser/VRML1/Nodes/CollideStyle.cpp \
	$(current_dir)/Titania/X3D/Parser/VRML1/Nodes/Cone.cpp \
	$(current_dir)/Titania/X3D/Parser/VRML1/Nodes/Coordinate3.cpp \
	$(current_dir)/Titania/X3D/Parser/VRML1/Nodes/Cube.cpp \
	$(current_dir)/Titania/X3D/Parser/VRML1/Nodes/CustomNode.cpp \
	$(current_dir)/Titania/X3D/Parser/VRML1/Nodes/Cylinder.cpp \
	$(current_dir)/Titania/X3D/Parser/VRML1/Nodes/DirectedSound.cpp \
	$(current_dir)/Titania/X3D/Parser/VRML1/Nodes/DirectionalLight.cpp \
	$(current_dir)/Titania/X3D/Parser/VRML1/Nodes/ElevationGrid.cpp \
	$(current_dir)/Titania/X3D/Parser/VRML1/Nodes/Environment.cpp \
	$(current_dir)/Titania/X3D/Parser/VRML1/Nodes/FontStyle.cpp \
	$(current_dir)/Titania/X3D/Parser/VRML1/Nodes/GeneralCylinder.cpp \
	$(current_dir)/Titania/X3D/Parser/VRML1/Nodes/IndexedFaceSet.cpp \
	$(current_dir)/Titania/X3D/Parser/VRML1/Nodes/IndexedLineSet.cpp \
	$(current_dir)/Titania/X3D/Parser/VRML1/Nodes/Info.cpp \
	$(current_dir)/Titania/X3D/Parser/VRML1/Nodes/LOD.cpp \
	$(current_dir)/Titania/X3D/Parser/VRML1/Nodes/Material.cpp \
	$(current_dir)/Titania/X3D/Parser/VRML1/Nodes/MaterialBinding.cpp \
	$(current_dir)/Titania/X3D/Parser/VRML1/Nodes/MatrixTransform.cpp \
	$(current_dir)/Titania/X3D/Parser/VRML1/Nodes/NavigationInfo.cpp \
	$(current_dir)/Titania/X3D/Parser/VRML1/Nodes/Normal.cpp \
	$(current_dir)/Titania/X3D/Parser/VRML1/Nodes/NormalBinding.cpp \
	$(current_dir)/Titania/X3D/Parser/VRML1/Nodes/OrthographicCamera.cpp \
	$(current_dir)/Titania/X3D/Parser/VRML1/Nodes/PerspectiveCamera.cpp \
	$(current_dir)/Titania/X3D/Parser/VRML1/Nodes/PointLight.cpp \
	$(current_dir)/Titania/X3D/Parser/VRML1/Nodes/PointSet.cpp \
	$(current_dir)/Titania/X3D/Parser/VRML1/Nodes/PointSound.cpp \
	$(current_dir)/Titania/X3D/Parser/VRML1/Nodes/Rotation.cpp \
	$(current_dir)/Titania/X3D/Parser/VRML1/Nodes/Scale.cpp \
	$(current_dir)/Titania/X3D/Parser/VRML1/Nodes/Separator.cpp \
	$(current_dir)/Titania/X3D/Parser/VRML1/Nodes/ShapeHints.cpp \
	$(current_dir)/Titania/X3D/Parser/VRML1/Nodes/Sphere.cpp \
	$(current_dir)/Titania/X3D/Parser/VRML1/Nodes/SpotLight.cpp \
	$(current_dir)/Titania/X3D/Parser/VRML1/Nodes/Switch.cpp \
	$(current_dir)/Titania/X3D/Parser/VRML1/Nodes/Text.cpp \
	$(current_dir)/Titania/X3D/Parser/VRML1/Nodes/TextLanguage.cpp \
	$(current_dir)/Titania/X3D/Parser/VRML1/Nodes/Texture2.cpp \
	$(current_dir)/Titania/X3D/Parser/VRML1/Nodes/Texture2Transform.cpp \
	$(current_dir)/Titania/X3D/Parser/VRML1/Nodes/TextureCoordinate2.cpp \
	$(current_dir)/Titania/X3D/Parser/VRML1/Nodes/Transform.cpp \
	$(current_dir)/Titania/X3D/Parser/VRML1/Nodes/Translation.cpp \
	$(current_dir)/Titania/X3D/Parser/VRML1/Nodes/VRML1Node.cpp \
	$(current_dir)/Titania/X3D/Parser/VRML1/Nodes/WorldInfo.cpp \
	$(current_dir)/Titania/X3D/Parser/VRML1/Nodes/WWWAnchor.cpp \
	$(current_dir)/Titania/X3D/Parser/VRML1/Nodes/WWWInline.cpp \
	$(current_dir)/Titania/X3D/Parser/VRML1/Parser.cpp \
	$(current_dir)/Titania/X3D/Parser/Wavefront/Parser.cpp \
	$(current_dir)/Titania/X3D/Parser/X3DParser.cpp \
	$(current_dir)/Titania/X3D/Parser/XMLParser.cpp \
	$(current_dir)/Titania/X3D/Prototype/ExternProtoDeclaration.cpp \
	$(current_dir)/Titania/X3D/Prototype/ProtoDeclaration.cpp \
	$(current_dir)/Titania/X3D/Prototype/X3DProtoDeclarationNode.cpp \
	$(current_dir)/Titania/X3D/Rendering/ClipPlaneContainer.cpp \
	$(current_dir)/Titania/X3D/Rendering/CollisionContainer.cpp \
	$(current_dir)/Titania/X3D/Rendering/DependentRenderer.cpp \
	$(current_dir)/Titania/X3D/Rendering/DepthTestContainer.cpp \
	$(current_dir)/Titania/X3D/Rendering/FogContainer.cpp \
	$(current_dir)/Titania/X3D/Rendering/FrameBuffer.cpp \
	$(current_dir)/Titania/X3D/Rendering/LightContainer.cpp \
	$(current_dir)/Titania/X3D/Rendering/PolygonModeContainer.cpp \
	$(current_dir)/Titania/X3D/Rendering/PolygonOffsetContainer.cpp \
	$(current_dir)/Titania/X3D/Rendering/ProjectiveTextureContainer.cpp \
	$(current_dir)/Titania/X3D/Rendering/ShapeContainer.cpp \
	$(current_dir)/Titania/X3D/Rendering/TextureBuffer.cpp \
	$(current_dir)/Titania/X3D/Rendering/ViewVolume.cpp \
	$(current_dir)/Titania/X3D/Rendering/X3DRenderObject.cpp \
	$(current_dir)/Titania/X3D/Rendering/X3DShapeContainer.cpp \
	$(current_dir)/Titania/X3D/RenderingSurface/ContextLock.cpp \
	$(current_dir)/Titania/X3D/RenderingSurface/RenderingContext.cpp \
	$(current_dir)/Titania/X3D/RenderingSurface/X3DRenderingSurface.cpp \
	$(current_dir)/Titania/X3D/Routing/Route.cpp \
	$(current_dir)/Titania/X3D/Routing/Router.cpp \
	$(current_dir)/Titania/X3D/Routing/X3DRouterObject.cpp \
	$(current_dir)/Titania/X3D/Thread/SceneFuture.cpp \
	$(current_dir)/Titania/X3D/Thread/Texture3DFuture.cpp \
	$(current_dir)/Titania/X3D/Thread/TextureFuture.cpp \
	$(current_dir)/Titania/X3D/Tools/CADGeometry/IndexedQuadSetTool.cpp \
	$(current_dir)/Titania/X3D/Tools/CADGeometry/QuadSetTool.cpp \
	$(current_dir)/Titania/X3D/Tools/Core/X3DBaseTool.cpp \
	$(current_dir)/Titania/X3D/Tools/Core/X3DChildNodeTool.cpp \
	$(current_dir)/Titania/X3D/Tools/Core/X3DNodeTool.cpp \
	$(current_dir)/Titania/X3D/Tools/Core/X3DToolObject.cpp \
	$(current_dir)/Titania/X3D/Tools/EnvironmentalSensor/ProximitySensorTool.cpp \
	$(current_dir)/Titania/X3D/Tools/EnvironmentalSensor/TransformSensorTool.cpp \
	$(current_dir)/Titania/X3D/Tools/EnvironmentalSensor/VisibilitySensorTool.cpp \
	$(current_dir)/Titania/X3D/Tools/EnvironmentalSensor/X3DEnvironmentalSensorNodeTool.cpp \
	$(current_dir)/Titania/X3D/Tools/Geometry2D/Arc2DTool.cpp \
	$(current_dir)/Titania/X3D/Tools/Geometry2D/ArcClose2DTool.cpp \
	$(current_dir)/Titania/X3D/Tools/Geometry2D/Circle2DTool.cpp \
	$(current_dir)/Titania/X3D/Tools/Geometry2D/Disk2DTool.cpp \
	$(current_dir)/Titania/X3D/Tools/Geometry2D/Polyline2DTool.cpp \
	$(current_dir)/Titania/X3D/Tools/Geometry2D/Polypoint2DTool.cpp \
	$(current_dir)/Titania/X3D/Tools/Geometry2D/Rectangle2DTool.cpp \
	$(current_dir)/Titania/X3D/Tools/Geometry2D/TriangleSet2DTool.cpp \
	$(current_dir)/Titania/X3D/Tools/Geometry3D/Box/BoxTool.cpp \
	$(current_dir)/Titania/X3D/Tools/Geometry3D/Cone/ConeTool.cpp \
	$(current_dir)/Titania/X3D/Tools/Geometry3D/Cylinder/CylinderTool.cpp \
	$(current_dir)/Titania/X3D/Tools/Geometry3D/ElevationGrid/ElevationGridTool.cpp \
	$(current_dir)/Titania/X3D/Tools/Geometry3D/Extrusion/ExtrusionTool.cpp \
	$(current_dir)/Titania/X3D/Tools/Geometry3D/IndexedFaceSet/IndexedFaceSetTool.cpp \
	$(current_dir)/Titania/X3D/Tools/Geometry3D/IndexedFaceSet/X3DIndexedFaceSetBrushObject.cpp \
	$(current_dir)/Titania/X3D/Tools/Geometry3D/IndexedFaceSet/X3DIndexedFaceSetCutObject.cpp \
	$(current_dir)/Titania/X3D/Tools/Geometry3D/IndexedFaceSet/X3DIndexedFaceSetKnifeObject.cpp \
	$(current_dir)/Titania/X3D/Tools/Geometry3D/IndexedFaceSet/X3DIndexedFaceSetLightSaberObject.cpp \
	$(current_dir)/Titania/X3D/Tools/Geometry3D/IndexedFaceSet/X3DIndexedFaceSetOperationsObject.cpp \
	$(current_dir)/Titania/X3D/Tools/Geometry3D/IndexedFaceSet/X3DIndexedFaceSetSculpToolObject.cpp \
	$(current_dir)/Titania/X3D/Tools/Geometry3D/IndexedFaceSet/X3DIndexedFaceSetSelectionObject.cpp \
	$(current_dir)/Titania/X3D/Tools/Geometry3D/IndexedFaceSet/X3DIndexedFaceSetTool.cpp \
	$(current_dir)/Titania/X3D/Tools/Geometry3D/IndexedFaceSet/X3DIndexedFaceSetTransformObject.cpp \
	$(current_dir)/Titania/X3D/Tools/Geometry3D/Sphere/SphereTool.cpp \
	$(current_dir)/Titania/X3D/Tools/Geospatial/GeoElevationGridTool.cpp \
	$(current_dir)/Titania/X3D/Tools/Geospatial/GeoViewpointTool.cpp \
	$(current_dir)/Titania/X3D/Tools/Grids/AngleGridTool.cpp \
	$(current_dir)/Titania/X3D/Tools/Grids/AxonometricGridTool.cpp \
	$(current_dir)/Titania/X3D/Tools/Grids/GridTool.cpp \
	$(current_dir)/Titania/X3D/Tools/Grids/X3DGridTool.cpp \
	$(current_dir)/Titania/X3D/Tools/Grouping/X3DBoundedObjectTool.cpp \
	$(current_dir)/Titania/X3D/Tools/Grouping/X3DTransformNodeTool.cpp \
	$(current_dir)/Titania/X3D/Tools/Layering/X3DActiveLayerTool.cpp \
	$(current_dir)/Titania/X3D/Tools/Layout/LayoutGroupTool.cpp \
	$(current_dir)/Titania/X3D/Tools/Lighting/DirectionalLightTool.cpp \
	$(current_dir)/Titania/X3D/Tools/Lighting/PointLightTool.cpp \
	$(current_dir)/Titania/X3D/Tools/Lighting/SpotLightTool.cpp \
	$(current_dir)/Titania/X3D/Tools/Lighting/X3DLightNodeTool.cpp \
	$(current_dir)/Titania/X3D/Tools/Navigation/BillboardTool.cpp \
	$(current_dir)/Titania/X3D/Tools/Navigation/CollisionTool.cpp \
	$(current_dir)/Titania/X3D/Tools/Navigation/LODTool.cpp \
	$(current_dir)/Titania/X3D/Tools/Navigation/OrthoViewpointTool.cpp \
	$(current_dir)/Titania/X3D/Tools/Navigation/ViewpointTool.cpp \
	$(current_dir)/Titania/X3D/Tools/Navigation/X3DViewpointNodeTool.cpp \
	$(current_dir)/Titania/X3D/Tools/NURBS/NurbsCurveTool.cpp \
	$(current_dir)/Titania/X3D/Tools/NURBS/NurbsPatchSurfaceTool.cpp \
	$(current_dir)/Titania/X3D/Tools/NURBS/NurbsSweptSurfaceTool.cpp \
	$(current_dir)/Titania/X3D/Tools/NURBS/NurbsSwungSurfaceTool.cpp \
	$(current_dir)/Titania/X3D/Tools/NURBS/NurbsTrimmedSurfaceTool.cpp \
	$(current_dir)/Titania/X3D/Tools/NURBS/X3DNurbsSurfaceGeometryNodeTool.cpp \
	$(current_dir)/Titania/X3D/Tools/NURBS/X3DParametricGeometryNodeTool.cpp \
	$(current_dir)/Titania/X3D/Tools/Picking/PickableGroupTool.cpp \
	$(current_dir)/Titania/X3D/Tools/Rendering/CoordinateTool.cpp \
	$(current_dir)/Titania/X3D/Tools/Rendering/IndexedLineSetTool.cpp \
	$(current_dir)/Titania/X3D/Tools/Rendering/IndexedTriangleFanSetTool.cpp \
	$(current_dir)/Titania/X3D/Tools/Rendering/IndexedTriangleSetTool.cpp \
	$(current_dir)/Titania/X3D/Tools/Rendering/IndexedTriangleStripSetTool.cpp \
	$(current_dir)/Titania/X3D/Tools/Rendering/LineSetTool.cpp \
	$(current_dir)/Titania/X3D/Tools/Rendering/NormalTool.cpp \
	$(current_dir)/Titania/X3D/Tools/Rendering/PointSetTool.cpp \
	$(current_dir)/Titania/X3D/Tools/Rendering/TriangleFanSetTool.cpp \
	$(current_dir)/Titania/X3D/Tools/Rendering/TriangleSetTool.cpp \
	$(current_dir)/Titania/X3D/Tools/Rendering/TriangleStripSet.cpp \
	$(current_dir)/Titania/X3D/Tools/Rendering/X3DComposedGeometryNodeTool.cpp \
	$(current_dir)/Titania/X3D/Tools/Rendering/X3DCoordinateNodeTool.cpp \
	$(current_dir)/Titania/X3D/Tools/Rendering/X3DGeometricPropertyNodeTool.cpp \
	$(current_dir)/Titania/X3D/Tools/Rendering/X3DGeometryNodeTool.cpp \
	$(current_dir)/Titania/X3D/Tools/Rendering/X3DLineGeometryNodeTool.cpp \
	$(current_dir)/Titania/X3D/Tools/Rendering/X3DNormalNodeTool.cpp \
	$(current_dir)/Titania/X3D/Tools/RigidBodyPhysics/X3DNBodyCollidableNodeTool.cpp \
	$(current_dir)/Titania/X3D/Tools/SnapTool/SnapSourceTool.cpp \
	$(current_dir)/Titania/X3D/Tools/SnapTool/SnapTargetTool.cpp \
	$(current_dir)/Titania/X3D/Tools/SnapTool/X3DSnapTool.cpp \
	$(current_dir)/Titania/X3D/Tools/Sound/SoundTool.cpp \
	$(current_dir)/Titania/X3D/Tools/Text/TextTool.cpp \
	$(current_dir)/Titania/X3D/Tools/X_ITE/TouchGroupTool.cpp

libtitania_x3d_la_LIBADD = $(TITANIA_X3D_LIBS)  \
	$(TITANIA_FTGL_LIBS) \
	$(TITANIA_STANDARD_LIBS) \
	$(TITANIA_STREAM_LIBS) \
	$(top_builddir)/libtitania-ftgl/libtitania-ftgl.la \
	$(top_builddir)/libtitania-standard/libtitania-standard.la \
	$(top_builddir)/libtitania-stream/libtitania-stream.la

AM_CPPFLAGS = $(TITANIA_X3D_CFLAGS) \
	$(TITANIA_FTGL_CFLAGS) \
	$(TITANIA_STANDARD_CFLAGS) \
	$(TITANIA_STREAM_CFLAGS) \
	-I$(top_builddir)/libtitania-ftgl \
	-I$(top_builddir)/libtitania-standard \
	-I$(top_builddir)/libtitania-stream

AM_LDFLAGS = -ldcmimage -ldcmimgle -ldcmnet -ldcmdata -ldcmjpeg -ldcmjpls -lijg8 -lijg12 -lijg16 -lofstd

install-exec-hook:
	mkdir -m 755 -p $(DESTDIR)$(datadir)
	cp -r share/* $(DESTDIR)$(datadir)
	find $(DESTDIR)$(datadir)/titania/ -type d -exec chmod 755 {} \;
	find $(DESTDIR)$(datadir)/titania/ -type f -exec chmod 644 {} \;
